# discaurd

./: package-lock.json  package.json  tsconfig.json
.insomnia/Environment/: env_2e4d35a4d427f60a28948049d66602cd55fa8a4f.yml
.insomnia/Request/: req_8c6a908b3f8a4870a5ff6155e4a9b123.yml
.insomnia/Workspace/: wrk_cd4c08077c944f6ebf281698d06be21d.yml
server/: .gitignore  Cargo.toml
server/.cargo/: config.toml
server/api/: Cargo.toml
server/api/src/: db.rs  helper.rs  lib.rs
server/api/src/actors/: mod.rs  user_actor.rs
server/api/src/api/: friend.rs  mod.rs  user.rs
server/api/src/models/: friend_model.rs  mod.rs  user_model.rs
server/api/src/services/: friend_service.rs  mod.rs  user_service.rs
server/entity/src/: friends.rs  lib.rs  prelude.rs  sea_orm_active_enums.rs  users.rs
server/prisma/: schema.prisma
server/prisma-cli/: Cargo.toml
server/src/: db.rs  helper.rs  main.rs  tables.rs
server/src/actors/: user_actor.rs
server/src/api/: friend.rs  mod.rs  user.rs
server/src/models/: friend_model.rs  mod.rs  user_model.rs
server/src/services/: friend_service.rs  user_service.rs
src/: App.tsx  middleware.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: AddFriendModal.tsx  TextInput.tsx
src/components/Friends/: Friends.tsx  FriendsNav.tsx
src/components/Modals/: AddFriendModal.tsx  DisplayUserModal.tsx  Modal.tsx
src/components/ui/: TextInput.tsx
src/lib/: httpUtil.ts  services.ts
src/pages/: Home.tsx  Login.tsx  Register.tsx  _app.tsx  _document.tsx  index.tsx
src/pages/api/auth/: [...nextauth].ts
src/pages/auth/: login.tsx  register.tsx
src/store/: friendStore.ts  modalStore.ts
src/types/: next-auth.d.ts
