[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false
workspace = "../"

[lib]
name = "api"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" } 
actix-cors = "0.6.4"
actix-web = "4.2.1"
chrono = "0.4.23"
dotenv = "0.15.0"
jsonwebtoken = "8.2.0"
mysql ="23.0.1"
rust-argon2 = "1.0.0"
serde = { version="1.0.152", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = [ "v4" ] }
anyhow = "1.0.69"
thiserror = "1.0.38"

[dependencies.sea-orm]
version = "0.11.0" # sea-orm version
features = [
    "debug-print",
    "runtime-actix-native-tls",
    "sqlx-mysql",
]


